--- a/app/src/main/res/drawable/entry_grey_button.xml
+++ b/app/src/main/res/drawable/entry_grey_button.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <size android:width="1dp" />
+    <corners android:radius="5dp" />
 
-    <solid android:color="@color/app_dark_yellow" />
+    <solid android:color="#E7E7E7"/>
+
 </shape>
