--- a/app/src/main/res/layout/activity_annual_bonus.xml
+++ b/app/src/main/res/layout/activity_annual_bonus.xml
@@ -2,5 +2,6 @@
 <com.maxwell.jazzyviewpager.JazzyViewPager
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/jazzyPager"
+    android:background="@color/b4"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
