--- a/projectfoundation/src/main/res/values/styles.xml
+++ b/projectfoundation/src/main/res/values/styles.xml
@@ -3,12 +3,18 @@
 
 
 
-    <style name="AppBaseTheme">
+    <style name="AppBaseTheme" parent="android:Theme.Light">
         <item name="android:windowAnimationStyle">@style/TransitionAnimation</item>
+        <item name="android:windowTitleSize">48dp</item>
+        <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
     </style>
 
     <style name="AppBaseTheme.Notitle" parent="android:Theme.Light.NoTitleBar">
         <item name="android:windowAnimationStyle">@style/TransitionAnimation</item>
+    </style>
+
+    <style name="CustomWindowTitleBackground">
+        <item name="android:background">@android:color/white</item>
     </style>
 
     <style name="TransitionAnimation" mce_bogus="1" parent="@android:style/Animation.Activity">
