--- a/app/src/main/res/layout/layout_tax_result.xml
+++ b/app/src/main/res/layout/layout_tax_result.xml
@@ -568,7 +568,7 @@
                         android:layout_weight="4"
                         android:gravity="right"
                         android:padding="10dp"
-                        android:textColor="@color/b1"
+                        android:textColor="@color/a1"
                         android:textSize="12sp" />
 
                     <TextView
