--- a/app/src/main/res/layout/layout_salary_font_face.xml
+++ b/app/src/main/res/layout/layout_salary_font_face.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_yellow"
-    android:focusableInTouchMode="true"
-    android:focusable="true">
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <ImageView
         android:id="@+id/title_back"
@@ -55,6 +55,33 @@
             android:textCursorDrawable="@drawable/edittext_cursor"
             android:textSize="14sp" />
 
+        <LinearLayout
+            android:id="@+id/buchongzfgjj_frame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/buchongzfgjj_param"
+                android:textColor="@color/app_dark_yellow"
+                android:text="@string/buchongzfgjj"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"/>
+
+            <View
+                android:id="@+id/check"
+                android:layout_width="8dp"
+                android:textColor="@color/b1"
+                android:textSize="12sp"
+                android:layout_marginLeft="5dp"
+                android:layout_gravity="center_vertical"
+                android:layout_height="13dp"
+                android:background="@drawable/ic_select"/>
+        </LinearLayout>
+
         <TextView
             android:id="@+id/submit"
             style="@style/BottomButtonStyle"
@@ -63,7 +90,7 @@
             android:layout_below="@id/salaryInput"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="70dp"
             android:text="@string/calculate"
             android:textSize="14sp" />
     </LinearLayout>
