--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,12 @@
         <item name="android:paddingTop">10dp</item>
         <item name="android:paddingBottom">10dp</item>
     </style>
+
+    <style name="PushInOutStyle">
+        <item name="android:windowEnterAnimation">@anim/push_up_in</item>
+        <!-- 指定显示的动画xml -->
+
+        <item name="android:windowExitAnimation">@anim/push_down_out</item>
+        <!-- 指定消失的动画xml -->
+    </style>
 </resources>
