--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,10 @@
         android:background="@drawable/stroke_dark_yellow"
         android:minHeight="350dp"
         android:orientation="vertical"
-        android:paddingRight="30dp"
-        android:paddingTop="30dp"
         android:paddingBottom="60dp"
-        android:paddingLeft="30dp">
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:paddingTop="30dp">
 
         <TextView
             android:id="@+id/about_us"
@@ -64,32 +64,34 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="105dp"
             android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/house_entry"
                 android:layout_width="105dp"
-                android:layout_height="105dp"
-                android:background="@drawable/entry_grey_button"
+                android:layout_height="match_parent"
+                android:background="@drawable/entry_orange_button"
                 android:gravity="center"
-                android:text="+"
+                android:text="@string/house_entry"
                 android:textColor="@android:color/white"
-                android:textSize="36sp" />
+                android:textSize="14sp" />
 
             <View
                 android:layout_width="30dp"
-                android:layout_height="1dp"
+                android:layout_height="105dp"
                 android:background="@android:color/white" />
 
             <TextView
+                android:id="@+id/forthEntry"
                 android:layout_width="105dp"
-                android:layout_height="105dp"
+                android:layout_height="match_parent"
                 android:background="@drawable/entry_grey_button"
                 android:gravity="center"
-                android:text="="
+                android:text="•••"
                 android:textColor="@android:color/white"
-                android:textSize="36sp" />
+                android:textSize="30sp" />
         </TableRow>
     </TableLayout>
 
