--- a/app/src/main/res/layout/layout_tax_result.xml
+++ b/app/src/main/res/layout/layout_tax_result.xml
@@ -70,8 +70,8 @@
             android:layout_height="320dp"
             android:layout_below="@+id/firstPart"
             android:background="@android:color/white"
-            android:paddingBottom="20dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="20dp">
 
             <View
                 android:layout_width="match_parent"
@@ -730,5 +730,57 @@
             </TableLayout>
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/forthPart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/thirdPart"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:paddingBottom="20dp">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@color/b4" />
+
+            <RelativeLayout
+                android:id="@+id/forthPartBg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="60dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_invest_guide_redirect">
+
+                <TextView
+                    android:id="@+id/actionText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="7dp"
+                    android:background="@drawable/hold_orange_button"
+                    android:gravity="center"
+                    android:paddingBottom="7dp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingTop="5dp"
+                    android:visibility="invisible"
+                    android:textColor="@android:color/white"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:lineSpacingExtra="3dp"
+                    android:padding="10dp"
+                    android:textStyle="bold"
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp" />
+            </RelativeLayout>
+        </LinearLayout>
     </RelativeLayout>
 </ScrollView>
