--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,11 @@
         <item name="android:windowBackground">@drawable/ic_splash</item>
     </style>
 
+    <style name="AppTheme.FullScreen" parent="AppBaseTheme.Notitle">
+        <item name="android:windowBackground">@drawable/ic_splash</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
     <style name="RatingStyle" parent="@android:style/Widget.RatingBar">
         <item name="android:progressDrawable">@drawable/rating_bar_yellow</item>
         <item name="android:indeterminateDrawable">@drawable/rating_bar_yellow</item>
